--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "check": "npm run prettier && npm run lint"
   },
   "dependencies": {
+    "@upstash/redis": "^1.35.0",
     "next": "15.3.4",
     "prettier": "^3.6.0",
     "react": "^19.0.0",
