--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "@fontsource/dm-sans": "^5.2.6",
     "@upstash/redis": "^1.35.0",
+    "colorthief": "^2.6.0",
     "next": "15.3.4",
     "prettier": "^3.6.0",
     "react": "^19.0.0",
