--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "next": "15.3.4",
     "prettier": "^3.6.0",
     "react": "^19.0.0",
-    "react-dom": "^19.0.0"
+    "react-dom": "^19.0.0",
+    "redis": "^5.10.0"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4",
